...
    <!-- Régimes alimentaires -->
    <string name="regime_vegetarien">Végétarien</string>
    <string name="regime_vegan">Végane</string>
    <string name="regime_sans_gluten">Sans gluten</string>

    <!-- Types de cuisine -->
    <string name="cuisine_italienne">Italienne</string>
    <string name="cuisine_mexicaine">Mexicaine</string>
    <string name="cuisine_indienne">Indienne</string>
    <string name="cuisine_japonaise">Japonaise</string>
    <string name="cuisine_grecque">Grecque</string>
    <string name="cuisine_quebecoise">Québécoise</string>
    <string name="cuisine_africaine">Africaine</string>
    <string name="cuisine_mediterraneenne">Méditerranéenne</string>
    <string name="cuisine_americaine">Américaine</string>
    <string name="cuisine_moyen_orientale">Moyen-Orientale</string>

...
